--- a/gen_page.css
+++ b/gen_page.css
@@ -2,6 +2,9 @@
     flex-basis: 49%;
     margin-top: 1%;
     margin-right: 1%;
+    width: 100%;
+    height: 100%;
+    min-width: 0;
 }
 #diagrams{
     margin-top: 20px;
